# freehands-cursor

./: .gitignore  README.md  TASK.md  check_keyboard_operations.py  pyproject.toml
freehands_cursor/: __init__.py  __main__.py  keyboard_operations.py
